[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Player/Health.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/player-spaceship-damage.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/explosion-1.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "go_to_idle"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "turn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "died"
length = 2.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "take_damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WhiteSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0
anim_speed = 1.5

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
hframes = 3

[node name="WhiteSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -19, -4, -10, -7, 0, -30, 10, -7, 18, -4, 18, 17, -19, 17 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 2
collision_mask = 12

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( -19, -4, -10, -7, 0, -30, 10, -7, 18, -4, 18, 17, -19, 17 )

[node name="MovementAnimations" type="AnimationPlayer" parent="."]
anims/go_to_idle = SubResource( 2 )
anims/turn = SubResource( 1 )

[node name="DamageAnimations" type="AnimationPlayer" parent="."]
anims/died = SubResource( 8 )
anims/take_damage = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.499999, -6 )
scale = Vector2( 1.85, 2.3 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 0, -43 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 1 )
health = 15

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 4 )
emitting = false
amount = 5
lifetime = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
